# IndirectProxyCall

./: .gitignore  CMakeLists.txt  README.md
asm/x64/: ProxyCaller.asm
include/: ProxyCaller.h  Syscalls.h
src/: Main.cpp  Syscalls.c
